# rssume

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-28-monitor-streaming-rss-plan.md  2026-05-28-opml-and-monitor-fix.md  2026-05-29-concurrent-translation.md  2026-05-29-feed-monitor-ux-improvement.md  2026-06-02-retry-mechanism.md
docs/superpowers/specs/: 2026-05-28-monitor-streaming-rss-design.md  2026-05-28-opml-and-monitor-fix-design.md  2026-05-29-concurrent-translation.md  2026-05-29-feed-monitor-ux-improvement.md  2026-06-02-llm-prompt-optimization-design.md  2026-06-02-retry-mechanism-design.md  2026-06-03-musl-migration-design.md  2026-06-03-xslt-rss-feed-readability-design.md  2026-06-04-rss-toc-sidebar-design.md
src/: config.rs  error.rs  lang.rs  main.rs  monitor.rs  opml.rs  scheduler.rs  storage.rs
src/llm/: mod.rs  retry.rs  summarize.rs  translate.rs  translate_summarize.rs
src/rss/: fetch.rs  generate.rs  mod.rs
src/web/: api.rs  mod.rs  panel.rs  rss_route.rs
templates/: base.html  dashboard.html  feed.html  feed_monitor.html  logs.html  monitor.html  rss_style.xsl  settings.html
templates/partials/: feed_monitor_status.html  monitor_status.html  stats_bar.html
