[package]
name = "rssume"
version = "0.2.7"
edition = "2024"
description = "RSS middleware with AI-powered translation and summarization"
license = "MIT"
repository = "https://github.com/zyxisme/rssume"
documentation = "https://docs.rs/rssume"
readme = "README.md"
keywords = ["rss", "feed", "llm", "translation", "summarization"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "rssume"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
feed-rs = "2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
whatlang = "0.16"
tera = "1"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6"
futures-util = "0.3"
anyhow = "1"
thiserror = "2"
regex-lite = "0.1"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
